Modified to suggest proj=sterea instead of proj=stere.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@681 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/proj_list/oblique_stereographic.html
+++ b/geotiff/html/proj_list/oblique_stereographic.html
@@ -90,19 +90,18 @@ Issues</a> for some more stereographic issues.<p>
 
 <h3>PROJ.4 Organization</h3>
 
-Should Oblique Stereographic really map onto the PROJ.4 Stereographic
-projection?  The PROJ.4 documentation suggests that given the appropriate
-parameters it will support oblique stereographic projections but within
-GeoTIFF this is given a separate CT_ code, despite having similar 
-parameters.<p>
+The EPSG Oblique Stereographic is what is also sometimes known as
+"double stereogrphic" and is distinct from the USGS (Snyder?) version
+which is "proj=stere" in PROJ.4.  See 
+<a href="http://bugzilla.remotesensing.org/show_bug.cgi?id=980">Bug 980</a>.<p>
 
 <b>
 <pre>
-  +proj=stere +lat_0=<i>Latitude of natural origin</i> 
-              +lon_0=<i>Longitude of natural origin</i>
-              +k_0=<i>Scale factor at natural origin</i> 
-              +x_0=<i>False Easting</i>
-              +y_0=<i>False Northing</i>
+  +proj=sterea +lat_0=<i>Latitude of natural origin</i> 
+               +lon_0=<i>Longitude of natural origin</i>
+               +k_0=<i>Scale factor at natural origin</i> 
+               +x_0=<i>False Easting</i>
+               +y_0=<i>False Northing</i>
 </pre>
 </b>
 
@@ -110,34 +109,34 @@ parameters.<p>
 
 Stereographic<p>
 
-The Stereographic projection may be imagined to be a projection of the earth's surface 
-onto a plane in contact with the earth at a single tangent point from the opposite end of 
-the diameter through that tangent point. <p>
+The Stereographic projection may be imagined to be a projection of the earth's surface onto a plane in contact with the earth at a single tangent point from the opposite end of the diameter through that tangent point. <p>
 
-This projection is best known in its polar form and is frequently used for mapping polar 
-areas where it complements the Universal Transverse Mercator used for lower latitudes. 
-Its spherical form has also been widely used by the US Geological Survey for planetary 
-mapping and the mapping at small scale of continental hydrocarbon provinces. In its 
-transverse or oblique ellipsoidal forms it is useful for mapping limited areas centred on the 
-point where the plane of the projection is regarded as tangential to the ellipsoid., e.g. the 
-Netherlands. The tangent point is the origin of the projected coordinate system and the 
-meridian through it is regarded as the central meridian. In order to reduce the scale error 
-at the extremities of the projection area it is usual to introduce a scale factor of less than 
-unity at the origin such that a unitary scale factor applies on a near circle centred at the 
-origin and some distance from it. <p>
+This projection is best known in its polar form and is frequently used for 
+mapping polar areas where it complements the Universal Transverse Mercator 
+used for lower latitudes.  Its spherical form has also been widely used by the 
+US Geological Survey for planetary mapping and the mapping at small scale of 
+continental hydrocarbon provinces. In its transverse or oblique ellipsoidal 
+forms it is useful for mapping limited areas centred on the point where the 
+plane of the projection is regarded as tangential to the ellipsoid., e.g. the 
+Netherlands. The tangent point is the origin of the projected coordinate system
+and the meridian through it is regarded as the central meridian. In order to 
+reduce the scale error at the extremities of the projection area it is usual 
+to introduce a scale factor of less than unity at the origin such that a 
+unitary scale factor applies on a near circle centred at the origin and some 
+distance from it. <p>
 
-The coordinate transformation from geographical to projected coordinates is executed via 
-the distance and azimuth of the point from the centre point or origin. For a sphere the 
-formulas are relatively simple. For the ellipsoid the parameters defining the conformal 
-sphere at the tangent point as origin are first derived. The conformal latitudes and 
-longitudes are substituted for the geodetic  latitudes and longitudes of the spherical 
-formulas for the origin and the point .<p>
+The coordinate transformation from geographical to projected coordinates is 
+executed via the distance and azimuth of the point from the centre point or 
+origin. For a sphere the formulas are relatively simple. For the ellipsoid the 
+parameters defining the conformal sphere at the tangent point as origin are 
+first derived. The conformal latitudes and longitudes are substituted for the 
+geodetic  latitudes and longitudes of the spherical formulas for the origin and
+the point .<p>
 
 Oblique and Equatorial Stereographic Formula<p>
 
-*	Given the geodetic origin of the projection at the tangent point (*0, *0), the parameters 
-defining the conformal sphere are:
-<p>
+* Given the geodetic origin of the projection at the tangent point (*0, *0), 
+the parameters defining the conformal sphere are:<p>
 
 <pre>
 	R= *( *0,*0)
@@ -155,20 +154,20 @@ The conformal latitude and longitude (*0,*0) of the origin are then computed fro
 	*0 = sin-1[(w-1)/(w+1)]
 
 	where S1 and S2 are as above and  w = c (S1S2e)n
- 
+
  	*0  = *0
 </pre>
 
-Then for any point with geodetic coordinates (*,*) the equivalent conformal latitude and 
-longitude ( * , * ) are computed from 
-<p>
+Then for any point with geodetic coordinates (*,*) the equivalent conformal 
+latitude and longitude ( * , * ) are computed from <p>
+
 <pre>
 	* = sin-1[(w-1)/(w+1)]
 
 where 	w = c (S1S2e)n
 	S1 = (1+sin*)/(1-sin*)
 	S2 = (1-e.sin*)/(1+e.sin*)
- 
+
 and 	* = n( * - *0 ) + *0 
  
 Then	B = [1+sin* sin*0 + cos*cos*0cos(* -*0 )]
@@ -178,16 +177,15 @@ and	N = FN + 2 R k0 [sin* cos*0 - cos*sin*0cos(* -*0 )] / B
 	E = FE + 2 R k0 cos* sin(* -*0 ) / B
 </pre>
 
-The reverse formulae to compute the geodetic coordinates from the grid coordinates 
-involves computing the conformal values, then the isometric latitude and finally the 
-geodetic values.
-<p>
+The reverse formulae to compute the geodetic coordinates from the grid 
+coordinates involves computing the conformal values, then the isometric 
+latitude and finally the geodetic values.<p>
 
-The parameters of the conformal sphere and conformal latitude and longitude at the origin 
-are computed as above. Then for any point with Stereographic grid coordinates (E,N) :<p>
+The parameters of the conformal sphere and conformal latitude and longitude 
+at the origin are computed as above. Then for any point with Stereographic 
+grid coordinates (E,N) :<p>
 
 <pre>
-
 	* = *0 + 2 tan-1[{(N-FN)-(E-FE) tan (j/2)} / (2 Rk0)]
 
 	* = j + 2 i + *0
