Updated to libgeotiff 1.2.3.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@704 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/geotiff.html
+++ b/geotiff/html/geotiff.html
@@ -52,8 +52,8 @@ and their parameters.<p>
 <h2>libgeotiff</h2>
 
 Libgeotiff is a public domain library normally hosted on top of 
-<a href="http://www.remotesensing.org/libtiff/">libtiff</a> for reading, and writing 
-GeoTIFF information tags.  Please contact 
+<a href="http://www.remotesensing.org/libtiff/">libtiff</a> for reading, and 
+writing GeoTIFF information tags.  Please contact 
 <a href="mailto:warmerdam@pobox.com">warmerdam@pobox.com</a> for more 
 information, or to get involved.<p>
 
@@ -63,10 +63,10 @@ information, or to get involved.<p>
 
 <li> libgeotiff CVS repository is :pserver:cvsanon@cvs.maptools.org:/cvs/maptools/cvsroot (password is empty, module is geotiff/libgeotiff). <p>
 
-<li> The most recent libgeotiff release is version 1.2.2 and is available
+<li> The most recent libgeotiff release is version 1.2.3 and is available
 from 
-<a href="ftp://ftp.remotesensing.org/pub/geotiff/libgeotiff/libgeotiff-1.2.2.tar.gz">ftp://ftp.remotesensing.org/pub/geotiff/libgeotiff/libgeotiff-1.2.2.tar.gz</a> 
-or the corresponding <a href="ftp://ftp.remotesensing.org/pub/geotiff/libgeotiff/libgeotiff122.zip">zip</a>.<p>
+<a href="ftp://ftp.remotesensing.org/pub/geotiff/libgeotiff/libgeotiff-1.2.3.tar.gz">ftp://ftp.remotesensing.org/pub/geotiff/libgeotiff/libgeotiff-1.2.3.tar.gz</a> 
+or the corresponding <a href="ftp://ftp.remotesensing.org/pub/geotiff/libgeotiff/libgeotiff123.zip">zip</a>.<p>
 
 <li> The released libgeotiff source code and various other items are 
 available in the 
