updated to 1.2.5, mention MetaCRS.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@770 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/geotiff.html
+++ b/geotiff/html/geotiff.html
@@ -55,9 +55,11 @@ and their parameters.<p>
 									
 <h2>libgeotiff</h2>
 
-Libgeotiff is a public domain library normally hosted on top of 
+Libgeotiff is an open source library normally hosted on top of 
 <a href="http://www.remotesensing.org/libtiff/">libtiff</a> for reading, and 
-writing GeoTIFF information tags.  Please contact 
+writing GeoTIFF information tags.  The libgeotiff library is a sub-project
+of the <a href="http://wiki.osgeo.org/wiki/MetaCRS">MetaCRS</a> project. 
+Please contact 
 <a href="mailto:warmerdam@pobox.com">warmerdam@pobox.com</a> for more 
 information, or to get involved.<p>
 
@@ -67,14 +69,13 @@ information, or to get involved.<p>
 
 <li> libgeotiff CVS repository is :pserver:cvsanon@cvs.maptools.org:/cvs/maptools/cvsroot (password is empty, module is geotiff/libgeotiff). <p>
 
-<li> The most recent libgeotiff release is version 1.2.4 and is available
+<li> The most recent libgeotiff release is version 1.2.5 and is available
 from 
-<a href="ftp://ftp.remotesensing.org/pub/geotiff/libgeotiff/libgeotiff-1.2.4.tar.gz">ftp://ftp.remotesensing.org/pub/geotiff/libgeotiff/libgeotiff-1.2.4.tar.gz</a> 
+<a href="ftp://ftp.remotesensing.org/pub/geotiff/libgeotiff/libgeotiff-1.2.5.tar.gz">ftp://ftp.remotesensing.org/pub/geotiff/libgeotiff/libgeotiff-1.2.5.tar.gz</a> 
 or the corresponding <a href="ftp://ftp.remotesensing.org/pub/geotiff/libgeotiff/libgeotiff124.zip">zip</a>.<p>
 
 <li> The released libgeotiff source code and various other items are 
-available in the 
-<a href="ftp://ftp.remotesensing.org/pub/geotiff/libgeotiff">ftp.remotesensing.org</a> or <a href="http://geotiff.maptools.org/dl/libgeotiff/">geotiff.maptools.org</a> download directories.<p>
+available in the <a href="http://download.osgeo.org/geotiff/libgeotiff">download.osgeo.org</a> download directories.<p>
 
 <li> A contributed win32 gui for listgeo is available
 at <a href="ftp://ftp.remotesensing.org/geotiff/libgeotiff/listgeo_GUI.zip">
@@ -86,13 +87,6 @@ libgeotiff) for dumping the metadata of a GeoTIFF file.<p>
 <li> <a href="geotifcp.html">geotifcp</a> - utility program (distributed with
 libgeotiff) for applying metadata to a TIFF file, making it a GeoTIFF
 file.<p>
-
-<li> Bug reports for libgeotiff, the GeoTIFF web pages, or specification
-can be 
-<a href="http://bugzilla.remotesensing.org/enter_bug.cgi?product=libgeotiff">
-entered</a> or 
-<a href="http://bugzilla.remotesensing.org/buglist.cgi?product=libgeotiff">
-viewed</a> via BugZilla. <p>
 
 </ul>
 
