--- a/geotiff/html/index.html
+++ b/geotiff/html/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-  <meta http-equiv="REFRESH" content="0; URL=geotiff.html">
+  <meta http-equiv="REFRESH" content="0; URL="http://geotiff.osgeo.org/">
   <title>HTML REDIRECT</title>
 </head>
 <body>
 
-<h1>Redirecting to geotiff.html</h1>
+<h1>Redirecting to http://geotiff.osgeo.org/</h1>
 
 </body>
 </html>
