--- a/geotiff/html/geotiff.html
+++ b/geotiff/html/geotiff.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-  <meta http-equiv="REFRESH" content="0; URL="http://geotiff.osgeo.org/">
+  <meta http-equiv="REFRESH" content="0; URL=http://geotiff.osgeo.org/">
   <title>HTML REDIRECT</title>
 </head>
 <body>
