fix a couple stale links.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@1599 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/proj_list/index.html
+++ b/geotiff/html/proj_list/index.html
@@ -58,9 +58,6 @@
 
 <li> <a href="principles.html">Projection Documentation Principles</a>
 
-<li> <a href="http://users.netonecom.net/~rburtch/geodesy/datums.html">The
-Coordinates, Datums and Transformation Index</a> (offsite)
-
 <!---
 <li> <a href="http://gdal.velocet.ca/cgi-bin/csv2html/TABLE=horiz_cs/FIELDS=0,1,5,7,8,14/CODE>3999/CODE<5000">EPSG GCS Code Table</a>
 
@@ -80,7 +77,7 @@ projection formulas, and some background information.
 PCS/GCS codes to OpenGIS WKT representations, courtesy of Adam Gawne-Cain
 of Cadcorp.
 
-<li> <a href="http://gdal.velocet.ca/~warmerda/wktproblems.html">OGC WKT 
+<li> <a href="http://home.gdal.org/projects/opengis/wktproblems.html">OGC WKT 
 Coordinate System Issues</a>
 
 <li> <a href="http://www.geocities.com/CapeCanaveral/1224/mapref.html">MapRef</a>
