--- a/geotiff/html/rpc_prop.html
+++ b/geotiff/html/rpc_prop.html
@@ -12,7 +12,7 @@ image.  This geometric model is often referred to as RPCs.<p>
 
 This extension proposes to stored essentially the same information as
 is stored in the RPC00B segment of an NITF file, but within a GeoTIFF
-tag.  The RPC00B elment of NITF is defined in the
+tag.  The RPC00B element of NITF is defined in the
 <a href="STDI-0002_v2.1.pdf">STDI-0002 2.1 (16Nov2000)</a>
 specification document.  The mathematical model is defined in 8.2.4 of
 that document, and the disk layout of the information is defined in
@@ -279,7 +279,7 @@ available". <p>
 <li> It would be very desirable to provide sample file(s) demonstrating
 this format.  I have a variety of NITF datasets with RPCs, but none
 appear to be publishable information.  If anyone can provide an NITF
-dataset appropriate for redistribution, with an RPC00B TRE, I would be
+dataset appropriate for redistribution, with an RPC00B Tagged Record Extension (TRE), I would be
 happy to translate it into GeoTIFF format as a demonstrator.<p>
 
 
