--- a/geotiff/html/usgs_geotiff.html
+++ b/geotiff/html/usgs_geotiff.html
@@ -203,7 +203,7 @@ GIS or digital mapping system which supports the "GeoTIFF" standard, as
 proposed in this document.
 
 The savings to the users and providers of raster data and exploitation
-softwares are potentially significant. With a platform interoperable
+software are potentially significant. With a platform interoperable
 GeoTIFF file, companies could stop spending excessive development
 resource in support of any and all proprietary formats which are
 invented. Data providers may be able to produce off-the-shelf imagery
@@ -228,7 +228,7 @@ NASA/JPL, and others, in which the current working proposal for GeoTIFF
 was outlined. The outline was condensed into a prerelease GeoTIFF
 specification document by Niles Ritter, and Mike Ruth of SPOT Image.
 Following discussions with Dr. Roger Lott of the European Petroleum
-Survey Group (EPSG), the GeoTIFF projection parametrization method was
+Survey Group (EPSG), the GeoTIFF projection parameterization method was
 extensively modified, and brought into compatibility with both the POSC
 Epicentre model, and the Federal Geographic Data Committee (FGDC)
 metadata approaches.
@@ -1213,7 +1213,7 @@ defining parameters for those codes:
  README.TXT  This file.
 
 
-The data files (.CSV) have a heirarchical structure:
+The data files (.CSV) have a hierarchical structure:
 
  +---------------------------+   +----------------------------+
  |           VERTCS          |   |           PROJCS           |
@@ -2825,7 +2825,7 @@ Values:
 
 Ellipsoid-Only GCS:
 
-   Note: the numeric code is equal to the code of the correspoding
+   Note: the numeric code is equal to the code of the corresponding
    EPSG ellipsoid, minus 3000.
 
    GCSE_Airy1830 =  4001
@@ -4612,7 +4612,7 @@ Ranges:
    [32768, 65535]  = Private User Implementations
 
 No vertical datum codes are currently defined, other than those implied by
-the corrsponding Vertical CS code.
+the corresponding Vertical CS code.
 
 
 
